# Wood-Species-Identification

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test.ipynb  train.ipynb  train.py  train_one.ipynb
src/: __init__.py  _dataset.py  _model.py
