[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Pom Pom <2003victoryy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = {extras = ["and-cuda"], version = "^2.16.1"}
scikit-learn = "^1.4.1.post1"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
loguru = "^0.7.2"
seaborn = "^0.13.2"
datasets = "^2.18.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
jupyter = "^1.0.0"
ipywidgets = "^8.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
